force-app/main/default/objects/Employment__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Agri/Horticulture</fullName>
            </value>
            <value>
                <fullName>Armed Services</fullName>
            </value>
            <value>
                <fullName>Banking/Finance</fullName>
            </value>
            <value>
                <fullName>Civil Services</fullName>
            </value>
            <value>
                <fullName>Cleaning/Laundry</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Emergency Services</fullName>
            </value>
            <value>
                <fullName>Home Duties</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Industry Services</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Leisure/Entertainment</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Other Category</fullName>
            </value>
            <value>
                <fullName>Pensioner</fullName>
            </value>
            <value>
                <fullName>Property/Business</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Retail/Wholesale</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Sciences</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>