force-app/main/default/objects/Employment__c/fields/Ownership_Share_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Share_Type__c</fullName>
    <label>Ownership Share Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint (other applicant)</fullName>
            </value>
            <value>
                <fullName>Joint (other)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>