force-app/main/default/objects/Employment__c/fields/Pay_yourself_salary__c.field-meta.xml
<CustomField>
    <fullName>Pay_yourself_salary__c</fullName>
    <label>Pay yourself salary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>