force-app/main/default/objects/Employment__c/fields/Postal_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_1__c</fullName>
    <label>Postal Code 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>