force-app/main/default/objects/Employment__c/fields/Postal_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_2__c</fullName>
    <label>Postal Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>