force-app/main/default/objects/Employment__c/fields/Provide_a_Company_Car__c.field-meta.xml
<CustomField>
    <fullName>Provide_a_Company_Car__c</fullName>
    <label>Provide a Company Car</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>