force-app/main/default/objects/Employment__c/fields/Regularly_work_Overtime__c.field-meta.xml
<CustomField>
    <fullName>Regularly_work_Overtime__c</fullName>
    <label>Regularly work Overtime</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>