force-app/main/default/objects/Employment__c/fields/Same_as_home_address__c.field-meta.xml
<CustomField>
    <fullName>Same_as_home_address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same as home address</label>
    <type>Checkbox</type>
</CustomField>