force-app/main/default/objects/Employment__c/fields/Self_Employed_Type__c.field-meta.xml
<CustomField>
    <fullName>Self_Employed_Type__c</fullName>
    <label>Self Employed Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole trader</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>