force-app/main/default/objects/Employment__c/fields/Source_Document__c.field-meta.xml
<CustomField>
    <fullName>Source_Document__c</fullName>
    <label>Source Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mogo</fullName>
            </value>
            <value>
                <fullName>Pay Slip</fullName>
            </value>
            <value>
                <fullName>Bank Statements</fullName>
            </value>
            <value>
                <fullName>Notice of Assessment</fullName>
            </value>
            <value>
                <fullName>Rental Ledger</fullName>
            </value>
            <value>
                <fullName>Customer Estimate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>