force-app/main/default/objects/Employment__c/fields/spouse_approximate_annual_income__c.field-meta.xml
<CustomField>
    <fullName>spouse_approximate_annual_income__c</fullName>
    <label>spouse approximate annual income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>