force-app/main/default/objects/Employment__c/fields/State_2__c.field-meta.xml
<CustomField>
    <fullName>State_2__c</fullName>
    <label>State 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>