force-app/main/default/objects/Employment__c/fields/Street_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Street_Number_2__c</fullName>
    <label>Street Number 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>