force-app/main/default/objects/Employment__c/fields/Street_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Street_Type_2__c</fullName>
    <label>Street Type 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>