force-app/main/default/objects/Employment__c/fields/Suburb_1__c.field-meta.xml
<CustomField>
    <fullName>Suburb_1__c</fullName>
    <label>Suburb 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>