force-app/main/default/objects/Employment__c/fields/Suburb_2__c.field-meta.xml
<CustomField>
    <fullName>Suburb_2__c</fullName>
    <label>Suburb 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>