force-app/main/default/objects/Employment__c/fields/Time_at_Employment__c.field-meta.xml
<CustomField>
    <fullName>Time_at_Employment__c</fullName>
    <formula>Text( Years__c ) + &quot; Years, &quot; + Text( Months__c ) + &quot; Months&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time at Employment</label>
    <type>Text</type>
</CustomField>