force-app/main/default/objects/Employment__c/fields/Unit_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number_1__c</fullName>
    <label>Unit Number 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>