force-app/main/default/objects/Employment__c/fields/Unit_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number_2__c</fullName>
    <label>Unit Number 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>