force-app/main/default/objects/Employment__c/fields/Verified_Income_Amount__c.field-meta.xml
<CustomField>
    <fullName>Verified_Income_Amount__c</fullName>
    <label>Verified Income Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>