force-app/main/default/objects/Employment__c/fields/Verified_Income_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Verified_Income_Frequency__c</fullName>
    <label>Verified Income Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>