force-app/main/default/objects/Employment__c/fields/Work_Overtime_amount__c.field-meta.xml
<CustomField>
    <fullName>Work_Overtime_amount__c</fullName>
    <label>Work Overtime amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>