force-app/main/default/objects/Employment__c/fields/Years_2_Previous__c.field-meta.xml
<CustomField>
    <fullName>Years_2_Previous__c</fullName>
    <label>Years 2 Previous</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>