force-app/main/default/objects/Employment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AnnualIncome__c</columns>
    <columns>EmployerAddress__c</columns>
    <columns>EmployerPhoneNumber__c</columns>
    <columns>EmploymentStatus__c</columns>
    <columns>EndDate__c</columns>
    <columns>Occupation__c</columns>
    <columns>Position__c</columns>
    <columns>SourceSystemId__c</columns>
    <columns>Verified_Income_Frequency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>